# fastapi-demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
commom/: deps.py  load_env.py
core/: server.py
core/config/: development.py  production.py
